# rusty_witcher_debugger

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: check-build.yml  draft-release.yml
crates/cli/: Cargo.toml
crates/cli/src/: input_waiter.rs  local_subcommands.rs  logging.rs  main.rs  response_handling.rs  server_subcommands.rs
crates/core/: Cargo.toml
crates/core/src/: constants.rs
crates/mock-server/: Cargo.toml
crates/mock-server/src/: lib.rs
crates/net/: Cargo.toml
crates/net-client/: Cargo.toml
crates/net-client/src/: client.rs  lib.rs  router.rs
crates/net-client/tests/: integration.rs
crates/net/src/: commands.rs  connection.rs  constants.rs  encoding.rs  lib.rs  packet.rs  packet_data.rs  tests.rs  utils.rs
crates/net/src/messages/: common.rs  mod.rs  notifications.rs  requests.rs
crates/net/src/protocol/: encoding.rs  mod.rs  packet.rs  packet_assembly.rs  packet_builder.rs  packet_data.rs
crates/scriptslog/: Cargo.toml
crates/scriptslog/src/: lib.rs
docs/: banner.xcf
src/cli/: cli.rs  local_subcommands.rs  response_handling.rs  server_subcommands.rs
src/core/: commands.rs  constants.rs  core.rs  packet.rs  packet_data.rs  response_formatting.rs  scriptslog.rs  tests.rs  utils.rs
