[package]
name = "rusty_witcher3_debugger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# The core of RW3D features containing all the commands
[lib]
name    = "rw3d_core"
path    = "src/core/core.rs"

# CLI adapter for the RW3D core
[[bin]]
name    = "rw3d_cli"
path    = "src/cli/cli.rs"

[dependencies]
