[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.5.1"
edition = "2021"
authors = ["SpontanCombust"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
clap = { version = "^3.0", features = ["derive"] }
directories = "4.0"
colored = "2.0"