[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.5.1"
edition = "2021"
authors = ["SpontanCombust"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
clap = { version = "^3.0", features = ["derive"] }
directories = "4.0"
colored = "2.0"
anyhow = "1.0.86"
shrinkwraprs = "0.3.0"
strum = "0.26"
strum_macros = "0.26"