[package]
name = "rw3d_cli"
description = "Command Line Interface for RWD features"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
rw3d_net = { path = "../net" }
rw3d_net_client = { path = "../net-client" }
rw3d_scriptslog = { path = "../scriptslog" }
clap.workspace = true
colored.workspace = true
anyhow.workspace = true